--- a/src/java_project_hotel_uni/reservationsForm.form
+++ b/src/java_project_hotel_uni/reservationsForm.form
@@ -262,7 +262,7 @@
             <Component class="javax.swing.JTable" name="jTable1">
               <Properties>
                 <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
-                  <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;Reservation ID&quot;, &quot;Guest ID&quot;, &quot;Room Number&quot;, &quot;Date_Came&quot;, &quot;Date_went&quot;&#xa;    }&#xa;)&#xa;&#xa;&#xa;" type="code"/>
+                  <Connection code="new javax.swing.table.DefaultTableModel(&#xa;    new Object [][] {&#xa;&#xa;    },&#xa;    new String [] {&#xa;        &quot;Reservation ID&quot;, &quot;Guest ID&quot;, &quot;Room Number&quot;, &quot;Date_Came&quot;, &quot;Date_went&quot;, &quot;Cancelled Reserv.&quot;&#xa;    }&#xa;)&#xa;&#xa;" type="code"/>
                 </Property>
                 <Property name="columnModel" type="javax.swing.table.TableColumnModel" editor="org.netbeans.modules.form.editors2.TableColumnModelEditor">
                   <TableColumnModel selectionModel="0"/>
